@@ -13,19 +13,20 @@ Date:
 ----------------------------------
 
 Changes/New Features:
+
 CAY-2570 Use MySQL adapter for latest versions of MariaDB
 
 Bug Fixes:
 
 CAY-2550 Modeler: ObjAttribute inspector modifies wrong columns in attribute table
 CAY-2559 Modeler: Warning dialog shows wrong information after changing target entity in dbRelationship
+CAY-2584 Crypto: can't use ColumnSelect with encrypted columns
 
 ----------------------------------
 Release: 4.0.1
 Date: December 20, 2018
 ----------------------------------
 
-=======
 Changes/New Features:
 
 CAY-2473 Modeler: cleanup attributes and relationship editors
